# agentcore-samples

./: README.md
a2a-workshop/: 01-bootstrap.ipynb  02-weather-agent.ipynb  03-shopping-agent.ipynb  Makefile  instructions.txt
browser-basics/: .gitignore  Makefile  README.md
code-interpreter-basics/: Makefile  README.md
empty-shell-with-agentcore-sdk/: .gitignore  README.md  build-and-ecr.sh  invoker.py  invoker.sh  main.py  pyproject.toml  requirements.txt
empty-shell-with-expressjs/: .gitignore  Dockerfile  README.md  build-and-ecr.sh  index.js  invoker.js  package-lock.json  package.json
empty-shell-with-fastapi/: Dockerfile  README.md  build-and-ecr.sh  invoker.py  invoker.sh  main.py  pyproject.toml  requirements.txt
empty-shell-with-flask/: Dockerfile  README.md  build-and-ecr.sh  invoker.py  main.py  pyproject.toml
gateway-basics/: Makefile  README.md
gateway-with-inbound-jwt/: .gitignore  Makefile  README.md
gateway-with-interceptors/: .gitignore  Makefile  README.md
gateway-with-oauth2-credential-provider-proxy/: .gitignore  Makefile  README.md
gateway-with-open-policy-agent/: .gitignore  Makefile  README.md
gateway-with-policies/: .gitignore  Makefile  README.md
strands-agent-with-observability/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
strands-agent-with-observability/scripts/: check-observability-prereqs.sh
strands-agent-with-observability/terraform/: agentcore_runtime.tf  cloudwatch-resource-policies.tf  ecr.tf  log-delivery-app-logs.tf  log-delivery-traces.tf  log-delivery-usage-logs.tf  providers.tf
(+187 files in other folders)
